# SDFRENDEREXAMPLE

./: .gitignore  CMakeLists.txt  build_log.txt
docs/: README.md  api_and_optimization.md  architecture.md  physics_and_simulation.md  rendering.md  tech_specs.md
shaders/: SDFCompute.glsl  TerrainBrush.glsl
src/: main.cpp
src/core/: InputState.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  SDFEdit.hpp  VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp
src/editor/: EditorUI.cpp  EditorUI.hpp
src/renderer/: BrickAtlas.cpp  BrickAtlas.hpp  ComputePipeline.cpp  ComputePipeline.hpp  DescriptorManager.cpp  DescriptorManager.hpp  ResourceManager.cpp  ResourceManager.hpp  SDFRenderer.cpp  SDFRenderer.hpp  SparseMap.cpp  SparseMap.hpp  Swapchain.cpp  Swapchain.hpp  Terrain.cpp  Terrain.hpp
